fix(root): fix display of component testing code panels
Fix overflow of component testing code panels, bringing display inline with other code panels.
Reformat whitespace on code panels

ref #1555

--- a/src/components/ComponentTesting/index.css
+++ b/src/components/ComponentTesting/index.css
@@ -86,6 +86,11 @@
   justify-content: flex-start !important;
 }
 
+.component-testing-panel {
+  overflow: auto;
+  width: 100%;
+}
+
 .snippet {
   border-radius: 0;
   margin: 0 !important;
